# hawk

./: LICENSE  Makefile  README.md
src/: CMakeLists.txt  main.c  test.hk
src/collections/: c_list.c  c_list.h  stack.c  symtable.c  t_list.c  t_list.h  token_list.c
src/compiler/: codegen.c  hexer.c  hexer.h  lexer.c  lexer.h  parser.c  token.h
src/include/hawk/: AST.h  c_list.h  codegen.h  lexer.h  parser.h  stack.h  symtable.h  t_list.h  token.h  token_list.h
src/lexer/: lexer.c
src/parser/: AST.c  parser.c
